Tests/CompilerTests/negative/missing-initializer.diagnostics.expected
negative/missing-initializer.hylo:4.14: error: binding declaration requires an initializer
  let x: Void
             ^
